// Patrón Strategy - Interfaz de estrategia de pago
public interface EstrategiaPago {
    double pagar(double monto);
}
