// Patrón Observer - Interfaz del observador
public interface Observer {
    void actualizar(String mensaje);
}
